# moodle-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/moodle_mcp/: __init__.py  __main__.py  algolia.py  cache.py  config.py  docs.py  rerank.py  server.py  tools.py  ws.py
tests/: test_algolia.py  test_cache.py  test_dispatch.py  test_docs.py  test_rerank.py  test_retry_after.py  test_server.py  test_tools.py  test_ws.py
